@@ -7,9 +7,10 @@ import gdgoc.be.common.util.SecurityUtil;
 import gdgoc.be.domain.CartItem;
 import gdgoc.be.domain.Product;
 import gdgoc.be.domain.User;
-import gdgoc.be.dto.CartDeleteRequest;
-import gdgoc.be.dto.CartRequest;
-import gdgoc.be.dto.CartResponse;
+import gdgoc.be.dto.cart.CartRequest;
+import gdgoc.be.dto.cart.CartResponse;
+import gdgoc.be.dto.cart.CartSummaryResponse;
+import gdgoc.be.dto.cart.CartUpdateRequest;
 import gdgoc.be.exception.BusinessErrorCode;
 import gdgoc.be.exception.BusinessException;
 import lombok.RequiredArgsConstructor;
@@ -17,7 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -28,33 +29,46 @@ public class CartService {
     private final UserRepository userRepository;
     private final ProductRepository productRepository;
 
-    public void addProductToCart(long productId, int quantity) {
+    public void addProductToCart(CartRequest request) {
         String email = SecurityUtil.getCurrentUserEmail();
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new BusinessException(BusinessErrorCode.USER_NOT_FOUND));
 
-        Product product = findProductById(productId);
+        Product product = findProductById(request.productId());
 
-        CartItem cartItem = cartItemRepository.findByUserEmailAndProductId(email, productId)
-                        .orElseGet(() -> CartItem.createEmptyCartItem(user, product));
+        if (!product.getSizesOptions().contains(request.selectedSize())) {
+            throw new BusinessException(BusinessErrorCode.INVALID_CART);
+        }
 
-        cartItem.addQuantity(quantity);
+        CartItem cartItem = cartItemRepository.findByUserEmailAndProductIdAndSelectedSize(
+                        email, request.productId(), request.selectedSize())
+                .orElseGet(() -> CartItem.createEmptyCartItem(user,product,request.selectedSize()));
+
+        cartItem.addQuantity(request.quantity());
         cartItem.validateStock(cartItem.getQuantity());
 
         cartItemRepository.save(cartItem);
     }
 
     @Transactional(readOnly = true)
-    public List<CartResponse> getMyCart() {
+    public CartSummaryResponse getMyCart() {
         String email = SecurityUtil.getCurrentUserEmail();
-        return cartItemRepository.findByUserEmail(email).stream()
+        List<CartResponse> items = cartItemRepository.findByUserEmail(email).stream()
                 .map(CartResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+
+        int subTotal = items.stream().mapToInt(item -> item.price() * item.quantity())
+                .sum();
+
+        int shippingFee = (subTotal >= 30000 || subTotal == 0) ? 0 : 3000;
+        int total = subTotal + shippingFee;
+
+        return new CartSummaryResponse(items,subTotal,shippingFee,total);
     }
 
-    public void deleteCartItem(CartDeleteRequest request) {
+    public void deleteCartItem(Long cartId) {
         String email = SecurityUtil.getCurrentUserEmail();
-        CartItem cartItem = cartItemRepository.findById(request.cartId())
+        CartItem cartItem = cartItemRepository.findById(cartId)
                 .orElseThrow(() -> new BusinessException(BusinessErrorCode.CART_ITEM_NOT_FOUND));
 
         if (!cartItem.getUser().getEmail().equals(email)) {
@@ -64,8 +78,46 @@ public class CartService {
         cartItemRepository.delete(cartItem);
     }
 
+    public void updateCartItem(Long cartItemId, CartUpdateRequest request) {
+
+        String email = SecurityUtil.getCurrentUserEmail();
+
+        CartItem cartItem = cartItemRepository.findById(cartItemId)
+                .orElseThrow(() -> new BusinessException(BusinessErrorCode.CART_ITEM_NOT_FOUND));
+
+        if (!cartItem.getUser().getEmail().equals(email)) {
+            throw new BusinessException(BusinessErrorCode.UNAUTHORIZED_CART_ACCESS);
+        }
+
+        /**
+         * Size 업데이트 및 검증 기능 필요
+         */
+
+        cartItem.validateStock(request.quantity());
+        cartItem.updateQuantity(request.quantity());
+    }
+
     private Product findProductById(Long productId) {
         return productRepository.findById(productId)
                 .orElseThrow(() -> new BusinessException(BusinessErrorCode.PRODUCT_NOT_FOUND));
+    }
+
+    public void deleteCartItems(List<Long> cartItemIds) {
+
+        String email = SecurityUtil.getCurrentUserEmail();
+
+        if (cartItemIds == null || cartItemIds.isEmpty()) {
+            List<CartItem> userItems = cartItemRepository.findByUserEmail(email);
+            cartItemRepository.deleteAllInBatch(userItems);
+            return;
+        }
+        List<CartItem> targetItems = cartItemRepository.findAllById(cartItemIds);
+
+        for (CartItem item : targetItems) {
+            if (!item.getUser().getEmail().equals(email)) {
+                throw new BusinessException(BusinessErrorCode.UNAUTHORIZED_CART_ACCESS);
+            }
+        }
+        cartItemRepository.deleteAllInBatch(targetItems);
     }
 }
